--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
             <h2>A Box of Chocolates 🍫</h2>
             <p>Each chocolate hides a feeling</p>
             <div class="chocos">
-                <img src="images/choco1.jpg" onclick="openMsg(0)">
-                <img src="images/choco2.jpg" onclick="openMsg(1)">
-                <img src="images/choco3.jpg" onclick="openMsg(2)">
-                <img src="images/choco4.jpg" onclick="openMsg(3)">
+                <img src="choco1.jpg" onclick="openMsg(0)">
+                <img src="choco2.jpg" onclick="openMsg(1)">
+                <img src="choco3.jpg" onclick="openMsg(2)">
+                <img src="choco4.jpg" onclick="openMsg(3)">
             </div>
             <button onclick="go(3)">Next 💕</button>
         </div>
@@ -153,10 +153,10 @@
             <p>Some memories + some chocolates around them</p>
             <div class="moments">
                 <!-- CHANGE THESE 4 IMAGES -->
-                <img src="images/m1.jpg">
-                <img src="images/m2.jpg">
-                <img src="images/m3.jpg">
-                <img src="images/m4.jpg">
+                <img src="m1.jpg">
+                <img src="m2.jpg">
+                <img src="m3.jpg">
+                <img src="m4.jpg">
             </div>
             <p>Every moment with you feels sweeter 🍫💖</p>
             <button onclick="go(4)">Final 💌</button>
@@ -238,3 +238,4 @@
 
 
 </html>
+
